Run sctbench tests